--- a/src/app/utils/structure-field-properties/structure-field-properties.component.html
+++ b/src/app/utils/structure-field-properties/structure-field-properties.component.html
@@ -66,8 +66,7 @@
 
         <div class="w-100 justify-content-center" *ngIf="!(isDataFormat || checkStateModel())">
           <div class="font-16 fw-400 mt-40 mb-3">Properties</div>
-          <div (click)="toggleCheck(formItem.get('properties.required'))" class=" d-flex align-items-center w-100 pb-3"
-            [ngClass]="{'hover':canEdit}"
+          <div class=" d-flex align-items-center w-100 pb-3" [ngClass]="{'hover':canEdit}"
             *ngIf="formItem.get('properties.required') && formItem.get('key').value !== '_self'">
             <odp-checkbox id="reqAttr" [edit]="{ status: canEdit }"
               (checkedChange)="toggleCheck(formItem.get('properties.required'))"
@@ -76,8 +75,7 @@
               class="ml-2 rounded-circle properties required d-flex justify-content-center align-items-center text-white fw-500 font-12">R</span>
             <span class="ml-2 text-dark font-14 fw-300">Required</span>
           </div>
-          <div (click)="toggleCheck(formItem.get('properties.createOnly'))" class=" d-flex align-items-center pb-3"
-            [ngClass]="{'hover':canEdit}"
+          <div class=" d-flex align-items-center pb-3" [ngClass]="{'hover':canEdit}"
             *ngIf="formItem.get('properties.createOnly') && formItem.get('key').value !=='_self'">
             <odp-checkbox id="createAttr" [edit]="{ status: canEdit }"
               (checkedChange)="toggleCheck(formItem.get('properties.createOnly'))"
@@ -86,8 +84,7 @@
               class="ml-2 rounded-circle properties create-only d-flex justify-content-center align-items-center text-white fw-500 font-12">C</span>
             <span class="ml-2 text-dark font-14 fw-300">Create Only</span>
           </div>
-          <div (click)="toggleCheck(formItem.get('properties.unique'))" class=" d-flex align-items-center pb-3"
-            [ngClass]="{'hover':canEdit}"
+          <div class=" d-flex align-items-center pb-3" [ngClass]="{'hover':canEdit}"
             *ngIf="formItem.get('properties.unique') && formItem.get('key').value !== '_self'">
             <odp-checkbox id="UniqAttr" [edit]="{ status: canEdit }"
               (checkedChange)="toggleCheck(formItem.get('properties.unique'))"
@@ -96,8 +93,7 @@
               class="ml-2 rounded-circle properties unique d-flex justify-content-center align-items-center text-white fw-500 font-12">U</span>
             <span class="ml-2 text-dark font-14 fw-300">Unique</span>
           </div>
-          <div (click)="toggleCheck(formItem.get('properties.password'))" class=" d-flex align-items-center pb-3"
-            [ngClass]="{'hover':canEdit}"
+          <div class=" d-flex align-items-center pb-3" [ngClass]="{'hover':canEdit}"
             *ngIf="formItem.get('properties.password') && formItem.get('key').value !== '_self' && (formItem.get('properties._detailedType').value !== 'email' && form.get('properties._detailedType').value !== 'enum')">
             <odp-checkbox id="secureAttr" [edit]="{ status: canEdit }"
               (checkedChange)="toggleCheck(formItem.get('properties.password'))"
