--- a/src/app/utils/structure-field-properties/number-property/number-property.component.html
+++ b/src/app/utils/structure-field-properties/number-property/number-property.component.html
@@ -44,7 +44,7 @@
       </span>
     </div>
   </div>
-  <div class="d-flex w-100 mb-4"
+  <div class="d-flex w-100 mb-4 flex-column"
     *ngIf="form.get('properties.currency') && form.get('properties._detailedType').value === 'currency'">
     <div class=" text-secondary">Currency</div>
     <div class="">
@@ -101,6 +101,10 @@
       (click)="clearList('enum')">Clear All
     </button>
   </div>
+
+  <div class="mt-4 font-16 fw-400">
+    Validations
+  </div>
   <div class="w-100 mb-4"
     *ngIf="form.get('properties.precision') && (form.get('properties._detailedType').value === '' || form.get('properties._detailedType').value === 'currency')">
     <div class="mb-2">
@@ -122,7 +126,7 @@
                    && (form.get('properties._detailedType').value === '' ||form.get('properties._detailedType').value === 'natural' ||
                    form.get('properties._detailedType').value === 'currency') && formatType!='FLATFILE' ">
     <div class="d-flex flex-row mb-2">
-      <div class=" text-secondary">Limit</div>
+      <div class=" text-secondary mr-2">Limit</div>
       <div class=" text-accent">Min and max limit of the value number</div>
     </div>
     <div class="border-left d-flex flex-column">
