--- a/src/app/utils/structure-field-properties/text-property/text-property.component.html
+++ b/src/app/utils/structure-field-properties/text-property/text-property.component.html
@@ -30,6 +30,7 @@
       </div>
     </div>
 
+
     <div>
       <div></div>
       <div class="ml-2">
@@ -56,38 +57,6 @@
   </div>
 
   <!-- PATTERN -->
-  <div class="d-flex flex-column w-100 mt-4" *ngIf="form.get('properties.pattern') && (form.get('properties._detailedType').value ==='' ||
-          form.get('properties._detailedType').value === 'password')">
-    <div class="position-relative ">
-      <div class="font-14 fw-300 text-dark mb-2">Pattern</div>
-      <div>
-        <input *ngIf="canEdit" class="form-control" type="text" formControlName="pattern" id="_pattern"
-          placeholder="Regular Expression"
-          [ngClass]="{'is-invalid':form.get('properties.pattern').hasError('patternValidator')}"
-          (blur)="reCalibrateTextDefaultValue('pattern', form.get('properties.pattern').value, form.get('properties')) ;generateSampleRegex(form.get('properties.pattern').value) ">
-        <span *ngIf="!canEdit">
-          <ng-container *ngIf="form.get('properties.pattern').value">{{form.get('properties.pattern').value}}
-          </ng-container>
-          <span *ngIf="!form.get('properties.pattern').value" class="text-muted">-</span>
-        </span>
-      </div>
-    </div>
-
-    <!-- <div class="d-flex w-100 my-2"
-      *ngIf="sampleRegexValue.length || form.get('properties.pattern').hasError('patternValidator') ">
-      <div ></div>
-      <div class=" bg-light py-2 pattern font-13 mr-3 text-center">
-        <ng-container *ngIf="!form.get('properties.pattern').hasError('patternValidator') && sampleRegexValue.length">
-          <span class="text-secondary">Sample :</span>
-          <span class="text-accent">{{sampleRegexValue}}</span>
-        </ng-container>
-        <span class="text-danger" *ngIf="form.get('properties.pattern').hasError('patternValidator')">
-          <span class="dsi dsi-close mr-1"></span>
-          <span class="text">Invalid regex pattern</span>
-        </span>
-      </div>
-    </div> -->
-  </div>
 
   <!-- VALUES -->
   <div class="w-100 mb-4 mt-4"
@@ -141,7 +110,7 @@
     </button>
   </div>
 
-  <div class="w-100 mb-4 mt-4" *ngIf="form.get('properties.hasTokens') && (form.get('properties.longText').value
+  <div class="w-100 mb-2 mt-3" *ngIf="form.get('properties.hasTokens') && (form.get('properties.longText').value
                   || form.get('properties.richText').value)">
     <div class="font-14 text-dark mb-2">Tokens</div>
     <div class=" position-relative" *ngIf="canEdit; else show_list">
@@ -174,9 +143,46 @@
     </button>
   </div>
 
+  <div class="mt-4 font-16 fw-400">
+    Validations
+  </div>
+
+  <div class="d-flex flex-column w-100 mt-3" *ngIf="form.get('properties.pattern') && (form.get('properties._detailedType').value ==='' ||
+  form.get('properties._detailedType').value === 'password')">
+    <div class="position-relative ">
+      <div class="font-14 fw-300 text-dark mb-2">Pattern</div>
+      <div>
+        <input *ngIf="canEdit" class="form-control" type="text" formControlName="pattern" id="_pattern"
+          placeholder="Regular Expression"
+          [ngClass]="{'is-invalid':form.get('properties.pattern').hasError('patternValidator')}"
+          (blur)="reCalibrateTextDefaultValue('pattern', form.get('properties.pattern').value, form.get('properties')) ;generateSampleRegex(form.get('properties.pattern').value) ">
+        <span *ngIf="!canEdit">
+          <ng-container *ngIf="form.get('properties.pattern').value">{{form.get('properties.pattern').value}}
+          </ng-container>
+          <span *ngIf="!form.get('properties.pattern').value" class="text-muted">-</span>
+        </span>
+      </div>
+    </div>
+
+    <!-- <div class="d-flex w-100 my-2"
+*ngIf="sampleRegexValue.length || form.get('properties.pattern').hasError('patternValidator') ">
+<div ></div>
+<div class=" bg-light py-2 pattern font-13 mr-3 text-center">
+<ng-container *ngIf="!form.get('properties.pattern').hasError('patternValidator') && sampleRegexValue.length">
+  <span class="text-secondary">Sample :</span>
+  <span class="text-accent">{{sampleRegexValue}}</span>
+</ng-container>
+<span class="text-danger" *ngIf="form.get('properties.pattern').hasError('patternValidator')">
+  <span class="dsi dsi-close mr-1"></span>
+  <span class="text">Invalid regex pattern</span>
+</span>
+</div>
+</div> -->
+  </div>
+
   <!-- MIN and MAX LENGTH -->
   <ng-container *ngIf="formatType!='FLATFILE'">
-    <div class="d-flex flex-column w-100 mt-4">
+    <div class="d-flex flex-column w-100 mt-3">
       <div class="row no-gutters">
         <div class="col-6">
           <ng-container *ngIf="form.get('properties.minlength')">
