--- a/src/app/home/b2b-flows-manage/b2b-flows-manage.component.html
+++ b/src/app/home/b2b-flows-manage/b2b-flows-manage.component.html
@@ -97,3 +97,6 @@
         </div>
     </div>
 </div>
+
+
+<odp-delete-modal [open]="openDeleteModal" (close)="closeDeleteNodeModal($event)"></odp-delete-modal>
