--- a/src/app/home/b2b-flows-manage/flow-node/flow-node.component.scss
+++ b/src/app/home/b2b-flows-manage/flow-node/flow-node.component.scss
@@ -1,11 +1,73 @@
-.node-block {
-    .node-delete-icon {
-        transition: 0.2s;
+.node-block-wrapper {
+    min-width: 218px;
+
+    .node-block {
+        min-width: 180px;
+        max-width: 180px;
+        min-height: 46px;
+        max-height: 46px;
     }
 
-    &:hover {
-        .node-delete-icon {
-            transform: translateX(160px);
+    .path-sm {
+        width: 64px;
+    }
+
+    .path-t {
+        margin-top: 20px;
+    }
+
+    .path {
+        width: 180px;
+    }
+
+    .path-v {
+        height: 20px;
+    }
+
+    .add-button {
+        min-height: 54px;
+        max-height: 54px;
+
+        &.align-items-start {
+            .border-left {
+                margin-left: 8px;
+            }
         }
+
+        &.side {
+            min-height: 46px;
+            max-height: 46px;
+        }
+
+        .dsi {
+            font-size: 18px;
+        }
+
+        .border-bottom {
+            width: 18px;
+        }
+
+        .border-left {
+            height: 18px;
+
+            &.negetive {
+                height: 23px;
+                margin-top: -23px;
+            }
+        }
+    }
+}
+
+.node-options-dropdown {
+    width: 180px;
+    overflow-y: auto;
+
+    .node-options-item {
+        height: 32px;
+
+        &:hover {
+            background: lighten($color: #000000, $amount: 20);
+        }
+
     }
 }
