--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -5,45 +5,45 @@
     </div>
     <div class="w-50 d-flex align-items-center justify-content-end">
       <div class="d-flex align-items-center mr-3"></div>
-      <div [@userProfileIcon]="showProfileOptions"
-        class="profile-icon d-flex align-items-center justify-content-center rounded-circle bg-light border border-border hover"
-        (click)="showProfileOptions = !showProfileOptions" ngbTooltip="User Profile" placement="bottom">
-        <span class="far fa-user fa-lg text-secondary"></span>
+      <div
+        class="profile-icon position-relative d-flex align-items-center justify-content-center rounded-circle border dark-border hover"
+        (click)="showProfileOptions = !showProfileOptions">
+        <span class="dsi dsi-user sub-heading font-14"></span>
+        <span *ngIf="isAppAdmin" class="dsi dsi-admin text-warning font-10 position-absolute"
+          ngbTooltip="You are admin of this App" container="body" placement="left"></span>
       </div>
-      <div [@userProfile] class="profile position-absolute bg-white border border-border" *ngIf="showProfileOptions"
-        odpClickOutside [ignore]="['.profile-icon', '.fa-user']" (outside)="showProfileOptions = false">
-        <div class="profile-container position-relative d-flex align-items-center h-100 w-100">
+      <div class="profile position-absolute bg-white p-4 border" *ngIf="showProfileOptions" odpClickOutside
+        [ignore]="['.profile-icon', '.dsi-user']" (outside)="showProfileOptions = false">
+        <div class="profile-container position-relative d-flex align-items-center h-100 w-100 pb-4 border-bottom">
           <div
-            class="user-icon d-flex align-items-center justify-content-center position-absolute rounded-circle bg-light border border-border">
-            <span class="far fa-user fa-lg text-secondary"></span>
-          </div>
-          <div
-            class="profile-thumbnail d-flex align-items-center justify-content-center rounded-circle bg-light border border-border mx-4">
-            <span class="far fa-user fa-2x text-secondary"></span>
+            class="profile-thumbnail d-flex align-items-center justify-content-center rounded-circle bg-light border dark-border mr-4">
+            <span class="dsi dsi-user sub-heading"></span>
           </div>
           <div class="profile-data d-flex flex-column">
-            <h4 class="profile-data-name font-weight-bold">{{ name }}</h4>
-            <div class="profile-data-more d-flex align-items-center">
-              <div class="text-secondary profile-data-more-item pr-3 username-holder text-truncate">
-                {{ username }}
-              </div>
-              <div class="profile-data-more-item px-1" *ngIf="authType && authType === 'local'">
-                <button type="button" class="btn btn-link btn-sm" (click)="toggleChangePassword = true">
-                  Change Password
-                </button>
-              </div>
-              <div class="profile-data-more-item px-1">
-                <button type="button" class="btn btn-link btn-sm" (click)="logout()" id="logout">
-                  Logout
-                </button>
-              </div>
+            <div class="profile-data-name text-truncate font-20 fw-600">{{ name }}</div>
+            <div class="profile-data-more text-truncate font-14 fw-400 sub-heading" [ngbTooltip]="username">
+              {{ username }}
             </div>
           </div>
-          <small class="position-absolute text-border app-version">v{{ version }}</small>
-          <small class="last-login text-muted">Last Login:
-            {{
-            lastLogin | dateFormat: 'DD-MMM-YYYY, hh:mm:ss A, z':'Etc/Zulu'
-            }}</small>
+        </div>
+
+        <div class="profile-options py-3">
+          <div *ngIf="authType && authType === 'local'" class="fw-500 py-2 hover d-flex align-items-center"
+            (click)="showProfileOptions = false; toggleChangePassword = true">
+            <span class="dsi dsi-settings sub-heading mr-2"></span>
+            <span>Change Password</span>
+          </div>
+          <div class="fw-500 py-2 hover d-flex align-items-center" (click)="logout()" id="logout">
+            <span class="dsi dsi-logout sub-heading mr-2"></span>
+            <span>Logout</span>
+          </div>
+        </div>
+
+        <div class="d-flex align-items-center justify-content-between font-12 fw-400 sub-heading">
+          <span class="last-login">Last Login:
+            {{ lastLogin | dateFormat: 'YYYY MMM DD, HH:mm:ss, z':'Etc/Zulu' }}
+          </span>
+          <span class="app-version">v{{ version }}</span>
         </div>
       </div>
     </div>
